--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <script src="https://kit.fontawesome.com/4dd5b2035b.js" crossorigin="anonymous"></script>
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>InVisible</title>
 </head>
